# clu

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  update-cty.sh
data/: Makefile.in  abbrev.tsv
data/desktop/: Makefile.in  xlog.desktop
data/doc/: Makefile.in
data/dxcc/: Makefile.in
data/glabels/: Makefile.in
data/images/: Makefile.in
data/man/: Makefile.am  Makefile.in
data/maps/: Makefile.in
data/mime/: Makefile.in
data/pixmaps/: Makefile.am  Makefile.in
data/remote/: Makefile.in
data/utils/: Makefile.in
po/: POTFILES.in  cs.gmo  cs.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  sk.gmo  sk.po  sv.gmo  sv.po  xlog.pot
src/: .clang-format  Makefile  Makefile.am  Makefile.in  awards_enum.c  awards_enum.h  callbacks_mainwindow.c  callbacks_mainwindow.h  callbacks_mainwindow_list.c  callbacks_mainwindow_menu.c  callbacks_mainwindow_menu.h  callbacks_mainwindow_qsoframe.c  callbacks_mainwindow_qsoframe.h  callbacks_mainwindow_toolbar.c  callbacks_preferencesdialog.c  callbacks_preferencesdialog.h  cfg.c  cfg.h  clu_enum.c  clu_enum.h  dxcc.c  dxcc.h  gc.c  gc.h  gui_aboutdialog.c  gui_awards_dxcc.c  gui_awards_iota.c  gui_awards_locator.c  gui_awards_wac.c  gui_awards_was.c  gui_awards_waz.c  gui_b4window.c  gui_closedialog.c  gui_countrymap.c  gui_countrymap.h  gui_defaultsdialog.c  gui_dialogsdialog.c  gui_dupecheckdialog.c  gui_dxcccheck.c  gui_dxcclist.c  (+44 more)
src/logfile/: Makefile.am  Makefile.in  adif3.c  adif3.h  cabrillo3.c  edi.c  (+5 more)
(+17 files in other folders)
