xlog_pixmapsdir = $(datadir)/pixmaps/xlog

xlog_pixmaps_DATA = \
	xlog.png \
	xlog-keyer.png \
	xlog-b4.png \
	xlog-map.png \
	xlog-scoring.png \
	gnome-mime-text-x-xlog.png \
	xlog.xpm \
	mini-clock.xpm \
	mini-trx.xpm \
	mini-xlog.xpm \
	s0.xpm \
	s1.xpm \
	s2.xpm \
	s3.xpm \
	s4.xpm \
	s5.xpm \
	s6.xpm \
	s7.xpm \
	s8.xpm \
	s9.xpm \
	s-meter.xpm \
	s.xpm \
	cwdaemon.png \
	jigsaw.png \
	countrymap.png

xlog_scalable_DATA = \
	xlog.svg

xlog_scalabledir = $(datadir)/icons/hicolor/scalable/apps

EXTRA_DIST = $(xlog_pixmaps_DATA) $(xlog_scalable_DATA)

